Lifecycle plugins with docs and tests (#99092)
* Lifecycle plugins with docs and tests

* Add a codeowners

* Update plugins/lifecycle/README.md

Co-authored-by: Mattias Nordberg <mattias.nordberg@gmail.com>

Co-authored-by: Mattias Nordberg <mattias.nordberg@gmail.com>