@@ -1,74 +1,32 @@
-package co.elastic.cloud.gradle;
+package co.elastic.gradle.lifecycle;
 
-import co.elastic.cloud.gradle.util.RetryUtils;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Sets;
+import co.elastic.gradle.utils.RetryUtils;
 import org.gradle.api.*;
-import org.gradle.api.artifacts.Configuration;
 import org.gradle.api.plugins.ApplicationPlugin;
 import org.gradle.api.plugins.JavaPlugin;
-import org.gradle.api.publish.maven.plugins.MavenPublishPlugin;
 import org.gradle.api.tasks.TaskContainer;
 import org.gradle.api.tasks.TaskDependency;
 import org.gradle.api.tasks.TaskProvider;
-import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
+import java.util.HashSet;
+import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-public class CloudBuildLifecyclePlugin implements Plugin<Project> {
-
-    public static final String RESOLVE_ALL_DEPENDENCIES_TASK_NAME = "resolveAllDependencies";
-
+public class MultiArchLifecyclePlugin implements Plugin<Project> {
     @Override
     public void apply(Project target) {
+        target.getPluginManager().apply(LifecyclePlugin.class);
+
         final TaskContainer tasks = target.getTasks();
-
-        target.apply(Collections.singletonMap("plugin", "base"));
-
-        // Apply the maven-publish plugin for the "publish" task
-        target.apply(t -> t.plugin(MavenPublishPlugin.class));
-
-        tasks.register(RESOLVE_ALL_DEPENDENCIES_TASK_NAME, task -> {
-            task.setDescription("Lifecycle task to resolves all external dependencies. " +
-                    "This task can be used to cache everything locally so these are not  downloaded while building." +
-                    " e.g. to download everything while on a better connection. In CI this is used to \"bake\" depdencies " +
-                    "so they are not re-downloaded on every run."
-            );
-            task.setGroup("prepare");
-            task.doLast(unused -> {
-                task.getProject().getConfigurations().stream()
-                        .filter(Configuration::isCanBeResolved)
-                        .forEach(Configuration::resolve);
-            });
-        });
-
-        tasks.named("publish", task -> {
-            task.setGroup("publishing");
-            task.setDescription("Lifecycle task to publish build artefacts to external repos (e.g. Docker images)");
-            task.dependsOn(tasks.named("build"));
-        });
-
-        tasks.register("syncBinDir", task -> {
-            task.setGroup("utilities");
-            task.setDescription("Lifecycle task to create links to \"bin dir\" that can be added to path so that tools " +
-                    "used by Gradle can be used on the cli."
-            );
-        });
 
         createMultiPlatformBuildLifecycle(tasks);
 
-        tasks.register("preCommit", task -> {
-            task.setGroup("verification");
-            task.setDescription("Implements a set of \"quick\" checks, e.g. linting and compilation that one can use to keep the repository clean.");
-        });
         tasks.named("checkPlatformIndependent", check -> check.dependsOn("preCommit"));
 
         // These binaries are platform dependent, we need to verify that they are available
-        tasks.named("checkForPlatform", check -> check.dependsOn("syncBinDir"));
+        tasks.named("checkForPlatform", check -> check.dependsOn(LifecyclePlugin.SYNC_BIN_DIR_TASK_NAME));
 
         tasks.register("securityScan", task -> {
            task.setGroup("security");
@@ -80,53 +38,55 @@ public class CloudBuildLifecyclePlugin implements Plugin<Project> {
             tasks.named("checkPlatformIndependent", it -> it.dependsOn("test"));
             tasks.named("assemblePlatformIndependent", it -> it.dependsOn("jar"));
         });
+
         target.getPlugins().withType(ApplicationPlugin.class, plugin -> {
             tasks.named("checkPlatformIndependent", it -> it.dependsOn("test"));
             tasks.named("assemblePlatformIndependent", it -> it.dependsOn("distTar", "distZip"));
         });
     }
 
+
     private void createMultiPlatformBuildLifecycle(TaskContainer tasks) {
-        final ImmutableMap<String, ImmutableMap<String, String>> taskMap = ImmutableMap.of(
-                "check", ImmutableMap.of(
+        final Map<String, Map<String, String>> taskMap = Map.of(
+                "check", Map.of(
                         "ForPlatform", "Run all platform specific verifications for the current platform only.",
                         "PlatformIndependent", "Run all platform independent verifications " +
-                                "(that don't depend on platform dependent tasks)",
+                                               "(that don't depend on platform dependent tasks)",
                         "CombinePlatform", "Run all verifications for all platforms that can be ran in a platform independent way. " +
-                                "Assumes that platform specific artefacts for this version are already published.",
+                                           "Assumes that platform specific artefacts for this version are already published.",
                         "", "Run verification for the current platform and that are platform independent." +
-                                " Useful for local testing."
+                            " Useful for local testing."
                 ),
-                "assemble", ImmutableMap.of(
+                "assemble", Map.of(
                         "ForPlatform", "Intended to create build artefacts, without running any tests for the current platform",
                         "PlatformIndependent", "Create platform independent build artefacts",
                         "CombinePlatform", "Create multi platform build artefacts, without running any tests.  " +
-                                "This includes the production artifacts and generating documentation for all supported platforms." +
-                                "Assumes that the platform specific artefacts were already published for this version.",
+                                           "This includes the production artifacts and generating documentation for all supported platforms." +
+                                           "Assumes that the platform specific artefacts were already published for this version.",
                         "", "Create platform specific artefacts for the current platform and emulate multi platform artefacts based on them." +
-                                " Useful for local testing."
+                            " Useful for local testing."
                 ),
-                "build", ImmutableMap.of(
+                "build", Map.of(
                         "ForPlatform", "Create artefacts and run all platform specific verifications for the current platform only.",
                         "PlatformIndependent", "Create artefacts and run all platform independent verifications " +
-                                "(that don't depend on platform dependent tasks)",
+                                               "(that don't depend on platform dependent tasks)",
                         "CombinePlatform", "Create artefacts and  run all verifications for all platforms that can be ran in a platform independent way. " +
-                                "Assumes that platform specific artefacts for this version are already published.",
+                                           "Assumes that platform specific artefacts for this version are already published.",
                         "", "Create artefacts and  run verification for the current platform and that are platform independent." +
-                                " Useful for local testing."
+                            " Useful for local testing."
                 ),
-                "publish", ImmutableMap.of(
+                "publish", Map.of(
                         "ForPlatform", "Create, verify and publish all platform specific artefacts for the current platform only.",
                         "PlatformIndependent", "Create, verify and publish platform independent artefacts " +
-                                "(that don't depend on platform dependent tasks)",
+                                               "(that don't depend on platform dependent tasks)",
                         "CombinePlatform", "Create, verify and publish artefacts multi platform artefacts. " +
-                                "Assumes that platform specific artefacts for this version are already published.",
+                                           "Assumes that platform specific artefacts for this version are already published.",
                         "", "Create, verify  and run verification for the current platform and that are platform independent." +
-                                " Useful for local testing."
+                            " Useful for local testing."
                 )
         );
 
-        final ImmutableMap<String, String> groupLookup = ImmutableMap.of(
+        final Map<String, String> groupLookup = Map.of(
                 "check", "verification",
                 "assemble", "build"
         );
@@ -134,7 +94,7 @@ public class CloudBuildLifecyclePlugin implements Plugin<Project> {
         taskMap.forEach((kind, descriptions) -> {
             descriptions.forEach((name, description) -> {
                 final Action<Task> taskConfig = task -> {
-                    if (kind != "publish") {
+                    if (! kind.equals("publish")) {
                         task.setGroup(groupLookup.getOrDefault(kind, kind));
                     } else {
                         task.setGroup("publishing");
@@ -149,33 +109,21 @@ public class CloudBuildLifecyclePlugin implements Plugin<Project> {
             });
 
             tasks.named(kind, task -> task.dependsOn(
-                        tasks.named(kind + "ForPlatform"),
-                        tasks.named(kind + "PlatformIndependent"),
-                        tasks.named(kind + "CombinePlatform")
-                ));
+                    tasks.named(kind + "ForPlatform"),
+                    tasks.named(kind + "PlatformIndependent"),
+                    tasks.named(kind + "CombinePlatform")
+            ));
         });
 
         // The specialized "build" tasks have the specialized "check" and "assemble" tasks as dependencies, just like the base
-        tasks.named("buildForPlatform", task -> {
-            task.dependsOn("assembleForPlatform", "checkForPlatform");
-        });
-        tasks.named("buildPlatformIndependent", task -> {
-            task.dependsOn("assemblePlatformIndependent", "checkPlatformIndependent");
-        });
-        tasks.named("buildCombinePlatform", task -> {
-            task.dependsOn("assembleCombinePlatform", "checkCombinePlatform");
-        });
+        tasks.named("buildForPlatform", task -> task.dependsOn("assembleForPlatform", "checkForPlatform"));
+        tasks.named("buildPlatformIndependent", task -> task.dependsOn("assemblePlatformIndependent", "checkPlatformIndependent"));
+        tasks.named("buildCombinePlatform", task -> task.dependsOn("assembleCombinePlatform", "checkCombinePlatform"));
 
         // The specialized "publish" tasks have the specialized "build" tasks as dependencies, just like the base
-        tasks.named("publishForPlatform", task -> {
-            task.dependsOn("buildForPlatform");
-        });
-        tasks.named("publishPlatformIndependent", task -> {
-            task.dependsOn("buildPlatformIndependent");
-        });
-        tasks.named("publishCombinePlatform", task -> {
-            task.dependsOn("buildCombinePlatform");
-        });
+        tasks.named("publishForPlatform", task -> task.dependsOn("buildForPlatform"));
+        tasks.named("publishPlatformIndependent", task -> task.dependsOn("buildPlatformIndependent"));
+        tasks.named("publishCombinePlatform", task -> task.dependsOn("buildCombinePlatform"));
 
         tasks.register("checkConsistency", task -> task.doFirst(it -> {
             it.getLogger().info("Checking that tasks aren't added to the base lifecycle tasks only");
@@ -191,19 +139,20 @@ public class CloudBuildLifecyclePlugin implements Plugin<Project> {
                         .collect(Collectors.toSet());
                 allLifecycleTasks.add("preCommit");
 
-                final Set<String> taskToCheck = getDependencySet(tasks.getByName(kind), allLifecycleTasks);
-                final Set<String> specializedTasks = ImmutableSet.<String>builder()
-                        .addAll(getDependencySet(tasks.getByName(kind + "ForPlatform"), allLifecycleTasks))
-                        .addAll(getDependencySet(tasks.getByName(kind + "PlatformIndependent"), allLifecycleTasks))
-                        .addAll(getDependencySet(tasks.getByName(kind + "CombinePlatform"), allLifecycleTasks))
-                        .build();
+                final Set<String> taskToCheck = new HashSet<>(getDependencySet(tasks.getByName(kind), allLifecycleTasks));
 
-                final Sets.SetView<String> dependenciesNotInSpecialized = Sets.difference(taskToCheck, specializedTasks);
-                if (!dependenciesNotInSpecialized.isEmpty()) {
-                    throw new GradleException("Dependencies '" + dependenciesNotInSpecialized + "' for " + kind +
-                            " isn't added to any platform specialized lifecycle tasks. " +
-                            "Please add it to " + kind + "ForPlatform, " + kind + "PlatformIndependent " +
-                            "or " + kind + "ALl"
+                final Set<String> specializedTasks = new HashSet<>();
+                specializedTasks.addAll(getDependencySet(tasks.getByName(kind + "ForPlatform"), allLifecycleTasks));
+                specializedTasks.addAll(getDependencySet(tasks.getByName(kind + "PlatformIndependent"), allLifecycleTasks));
+                specializedTasks.addAll(getDependencySet(tasks.getByName(kind + "CombinePlatform"), allLifecycleTasks));
+
+                taskToCheck.removeAll(specializedTasks);
+
+                if (!taskToCheck.isEmpty()) {
+                    throw new GradleException("Dependencies '" + taskToCheck + "' for " + kind +
+                                              " isn't added to any platform specialized lifecycle tasks. " +
+                                              "Please add it to " + kind + "ForPlatform, " + kind + "PlatformIndependent " +
+                                              "or " + kind + "ALl"
                     );
                 }
             });
@@ -212,7 +161,6 @@ public class CloudBuildLifecyclePlugin implements Plugin<Project> {
         tasks.named("checkPlatformIndependent", task -> task.dependsOn("checkConsistency"));
     }
 
-    @NotNull
     private Set<String> getDependencySet(Task taskToCheck, Set<String> filter) {
         return taskToCheck.getDependsOn().stream()
                 .flatMap(dep -> getDependentTaskName(taskToCheck, dep))
@@ -220,9 +168,8 @@ public class CloudBuildLifecyclePlugin implements Plugin<Project> {
                 .collect(Collectors.toSet());
     }
 
-    @NotNull
     @SuppressWarnings("rawtypes")
-    private Stream<String> getDependentTaskName(Task taskTocheck, Object dep) {
+    private Stream<String> getDependentTaskName(Task taskToCheck, Object dep) {
         final String depTaskName;
         if ((dep instanceof Task) || (dep instanceof TaskProvider) || (dep instanceof String)) {
             if (dep instanceof Task) {
@@ -242,14 +189,15 @@ public class CloudBuildLifecyclePlugin implements Plugin<Project> {
         } else {
             if (dep instanceof TaskDependency) {
                 // This is used by assemble to auto view task dependencies, unlikely to be something manual
-                return ((TaskDependency) dep).getDependencies(taskTocheck).stream()
+                return ((TaskDependency) dep).getDependencies(taskToCheck).stream()
                         .map(Task::getName);
             }
             if (dep instanceof NamedDomainObjectProvider) {
                 return Stream.of(((NamedDomainObjectProvider) dep).getName());
             }
-            throw new GradleException("Invalid dependency '" + dep + "' for " + taskTocheck + "(" + dep.getClass() + ")");
+            throw new GradleException("Unsupported dependency '" + dep + "' for " + taskToCheck + "(" + dep.getClass() + ")");
         }
         return Stream.of(depTaskName);
     }
+
 }
